tests/invalid/Expressions/Division_by_Zero.vyp
void main(void) {
    int a;
    a = 10 / 0;  // Division by zero
}
